--- a/src/css/common.css
+++ b/src/css/common.css
@@ -1,3 +1,35 @@
+.example {
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
+    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  line-height: 1.5;
+  background-color: #fff;
+  color: #2f2f37;
+  max-width: 600px; /* Ajustat pentru a se potrivi cu containerul */
+  margin: 0 auto; /* Centrare */
+  padding: 16px;
+  text-align: left; /* Aliniere text la stânga */
+}
+
+.example code {
+  font-family: monospace;
+  font-size: 16px;
+  font-weight: 700;
+  background-color: #ff6b0a;
+  color: #fff;
+  padding: 2px 6px;
+  border-radius: 2px;
+}
+
+.example .background {
+  height: 240px;
+  width: 240px; /* Ajustare dimensiuni */
+  float: left; /* Ajustare pentru plasarea la stânga */
+  margin-right: 20px; /* Spațiu între imagine și text */
+  background-image: url('../images/logo.png');
+  background-size: cover;
+  background-position: left top; /* Ajustare poziționare imagine */
+}
+
 body {
   font-family: 'Arial', sans-serif;
   margin: 0;
