--- a/src/sass/_example.scss
+++ b/src/sass/_example.scss
@@ -4,8 +4,10 @@
   line-height: 1.5;
   background-color: #fff;
   color: #2f2f37;
-  max-width: 960px;
+  max-width: 600px; /* Ajustat pentru a se potrivi cu containerul */
+  margin: 0 auto; /* Centrare */
   padding: 16px;
+  text-align: left; /* Aliniere text la stânga */
 }
 
 .example code {
@@ -20,9 +22,108 @@
 
 .example .background {
   height: 240px;
-  // ❗️❗️❗️ The path to images from a SASS file
-  // is always the same as from the css folder.
+  width: 240px; /* Ajustare dimensiuni */
+  float: left; /* Ajustare pentru plasarea la stânga */
+  margin-right: 20px; /* Spațiu între imagine și text */
   background-image: url('../images/logo.png');
   background-size: cover;
-  background-position: center;
+  background-position: left top; /* Ajustare poziționare imagine */
+}
+
+body {
+  font-family: 'Arial', sans-serif;
+  margin: 0;
+  padding: 0;
+}
+
+.container {
+  max-width: 600px;
+  margin: 50px auto;
+  text-align: center;
+}
+
+.loader {
+  display: none;
+  border: 8px solid #f3f3f3;
+  border-top: 8px solid #3498db;
+  border-radius: 50%;
+  width: 50px;
+  height: 50px;
+  animation: spin 1s linear infinite;
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+.error {
+  display: none;
+  color: red;
+}
+
+.breed-select {
+  display: none;
+  width: 100%;
+  padding: 10px;
+  margin-bottom: 20px;
+}
+
+.cat-info {
+  display: none;
+  text-align: center;
+}
+
+#catImage {
+  max-width: 100%;
+  height: auto;
+  margin-top: 20px;
+}
+.loader {
+  width: 48px;
+  height: 48px;
+  border-radius: 50%;
+  position: relative;
+  animation: rotate 1s linear infinite;
+}
+.loader::before,
+.loader::after {
+  content: '';
+  box-sizing: border-box;
+  position: absolute;
+  inset: 0px;
+  border-radius: 50%;
+  border: 5px solid #fff;
+  animation: prixClipFix 2s linear infinite;
+}
+.loader::after {
+  inset: 8px;
+  transform: rotate3d(90, 90, 0, 180deg);
+  border-color: #ff3d00;
+}
+
+@keyframes rotate {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+@keyframes prixClipFix {
+  0% {
+    clip-path: polygon(50% 50%, 0 0, 0 0, 0 0, 0 0, 0 0);
+  }
+  50% {
+    clip-path: polygon(50% 50%, 0 0, 100% 0, 100% 0, 100% 0, 100% 0);
+  }
+  75%,
+  100% {
+    clip-path: polygon(50% 50%, 0 0, 100% 0, 100% 100%, 100% 100%, 100% 100%);
+  }
 }
